--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Chris's Hobbies</title>
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<h1>Chris's Hobbies</h1>
