--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Chris's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -68,6 +69,9 @@
 										<tr>
 												<td>Transact SQL</td><td>★★★★★</td><td></td><td></td><td></td><td></td>
 												<td>MicroSoft Access</td><td>★★☆☆☆</td></tr>
+										<tr>
+												<td>Crystal Reports</td><td>★★★★☆</td><td></td><td></td><td></td><td></td>
+												<td>MicroSoft Office</td><td>★★★★☆</td></tr>
 							</tbody>
 							<tfoot>
 
