styled and updated site

--- a/index.html
+++ b/index.html
@@ -1,86 +1,60 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/styles.css">
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+		<title>Christopher Sipes</title>
+		<link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Merriweather+Sans&family=Montserrat:wght@500&family=Niconne&family=Righteous&family=Sacramento&display=swap" rel="stylesheet"
+	</head>
+	<body>
+ 		<div class="top-container">
+			<img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+			<h1>I'm Christopher.</h1>
+			<p class="subtitle">a <span class="dp">dev</span>eloper and <span class="dp">pro</span>grammer.</p>
+			<img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+			<br />
+			<img class="mountain-pic" src="images/mountainrange.png" alt="mountain-img">
+		</div>
+		<div class="middle-container">
+		  <div class="profile">
+		    <img class="chris-pic" src="images/chrisrsipes.jpg" alt="Chris's Profile Picture">
+		    <h2>Hello.</h2>
+		    <p>I am Christopher.</p>
+				<p>I am a developer and programmer.</p>
+				<p>I love coffee and chocolate.</p>
+		  </div>
+		  <hr>
+		  <div class="skills">
+		    <h2>My Skills.</h2>
+		    <div class="skill-row">
+		      <img class="skill-pic" src="images/abstract-code.png" alt="Code Screengrab">
+		      <h3>Development & Programming</h3>
+		      <p>I started learning to code when I was 10 years old, simply to create my own games.  Over time, I have gained a wealth of knowledge and experience programming and developing.</p>
+		    </div>
+		    <div class="skill-row">
+					<img class="skill-pic2" src="images/bethesda.jpg" alt="Bethesda Logo">
+		      <h3>Computer Gaming</h3>
+		      <p>At heart, I'm a gamer. Bethesda makes many of my favorite games. Bethesda does great work and I enjoy their creations. It is also a great stress reliever and hobby.</p>
+		    </div>
+		  </div>
+		  <hr>
+		  <div class="contact-me">
+		    <h2>Get In Touch</h2>
+		    <h3>If you enjoy gaming and developing as much as I do.</h3>
+		    <p>Enjoy gaming and developing as much as I do?</p>
+				<p>Let's talk about great games and development!</p>
+						<div class="button-space">
+		   	    <a href="mailto:xavierextreme@gmail.com" class="button">eMail Christopher</a>
+					  </div>
+		  </div>
+		</div>
 
-<head>
-	<meta charset="utf-8">
-	<title>Chris's Personal Site</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
 
-<body>
-	<table cellspacing=20>
-		<tr>
-			<td><img src="images/chrisrsipes.jpg" alt="Chris's Profile Picture in Binary"></td>
-			<td><h1>Christopher Sipes</h1>
-			<p><em><strong>Database Developer / Web Developer / Programmer</strong></em></p>
-			<p>Woking with Databases, Web Technologies, and Programming to solve problems.</p>
-			<p>Coffee is my all time favorite drink.</p></td>
-		</tr>
-	</table>
-	<hr />
-	<h3>Education</h3>
-	<ul>
-		<li>Bachelor in <strong><a href="https://www.britannica.com/science/computer-science">Computer Science</a></strong></li>
-		<li>Associate in <strong><a href="https://en.wikipedia.org/wiki/Business_administration">Business Administration</a></strong></li>
-		<li>Diploma from <strong><a href="https://www.home.elida.k12.oh.us/1/Home">Elida High School</a></strong></li>
-	</ul>
-	<hr  />
-	<h3>Work Experience</h3>
-			<table cellspacing=10>
-						<thead>
-									<tr>
-										<th>Dates</th><th>Work</th>
-									</tr>
-				  	</thead>
-						<tbody>
-								  <tr>
-											<td>2008 to Present</td><td>Senior Staff Engineer at CAPT</td></tr>
-									<tr>
-											<td></td><td>Database Developer</td></tr>
-									<tr>
-											<td></td><td>Systems Administrator</td></tr>
-									<tr>
-											<td></td><td>Programmer</td></tr>
-									<tr>
-											<td></td><td>Domain Administrator</td></tr>
-									<tr>
-											<td></td><td>Active Directory Lead</td></tr>
-						</tbody>
-						<tfoot>
-
-						</tfoot>
-			</table>
-			<hr />
-		<h3>Skills</h3>
-				<table cellspacing=10>
-							<tbody>
-									  <tr>
-												<td>HTML(5)</td><td>★★★☆☆</td><td></td><td></td><td></td><td></td>
-												<td>JavaScript</td><td>★★★☆☆</td></tr>
-									  <tr>
-												<td>Java</td><td>★☆☆☆☆</td><td></td><td></td><td></td><td></td>
-												<td>CSS(3)</td><td>★★★☆☆</td></tr>
-										<tr>
-												<td>Visual Basic.Net</td><td>★★★★★</td><td></td><td></td><td></td><td></td>
-												<td>Visual Studio 2019</td><td>★★★★☆</td></tr>
-										<tr>
-												<td>MicroSoft SQL 2012 - 2019</td><td>★★★★☆</td><td></td><td></td><td></td><td></td>
-												<td>C Sharp</td><td>★☆☆☆☆</td></tr>
-										<tr>
-												<td>Transact SQL</td><td>★★★★★</td><td></td><td></td><td></td><td></td>
-												<td>MicroSoft Access</td><td>★★☆☆☆</td></tr>
-										<tr>
-												<td>Crystal Reports</td><td>★★★★☆</td><td></td><td></td><td></td><td></td>
-												<td>MicroSoft Office</td><td>★★★★☆</td></tr>
-							</tbody>
-							<tfoot>
-
-							</tfoot>
-				</table>
-
-	<hr />
-	<p><a href="hobbies.html">My Hobbies</a></p>
-	<p><a href="contact.html">Contact Me</a></p>
-</body>
-
+		<div class="bottom-container">
+		  <a class="footer-link" href="https://www.linkedin.com/in/christopher-sipes-2618a6a7/">Christopher @ LinkedIn</a>
+		  <p class="copyright">© 2020 Christopher Sipes @ eXtreme Creations.</p>
+		</div>
+	</body>
 </html>
